<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:icon="@drawable/ic_baseline_add_shopping_cart_24"
    android:orderInCategory="2"
    android:title="@string/shopping_list"
    android:id="@+id/shoppinglist"
    />
    <item
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:orderInCategory="1"
        android:id="@+id/favorite"
        android:title="@string/favorite"/>
    <item
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="0"
        android:id="@+id/home"
        android:title="@string/home"/>
    <item
        android:icon="@drawable/ic_baseline_info_24"
        android:orderInCategory="3"
        android:id="@+id/contact_us"
        android:title="@string/about"/>

</menu>